--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 }
 
 .header-superior {
+    height: 40px;
     background-color: #1F1717;
     display: flex;
     align-items: center;
@@ -143,4 +144,8 @@ ul {
     display: flex;
     align-items: center;
     justify-content: start;
+}
+
+.icones i {
+    height: 200px;
 }
